--- a/static/css/home.css
+++ b/static/css/home.css
@@ -18,7 +18,8 @@ body {
 .slideshow-container {
     position: relative;
     max-width: 100vw;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
+    margin-top: 20px;
 }
 
 .trailer-slide {
@@ -78,10 +79,10 @@ body {
     position: absolute;
     top: 50%;
     left: 60%;
-    background-color: rgba(255, 255, 255, 0.842); /* Transparent white background */
-    color: #000; /* Black text color */
+    background-color: rgba(39, 68, 165, 0.932);/* Transparent white background */
+    color: #ffffff; /* Black text color */
     padding: 10px;
-    width: 40vw; /* Adjust width dynamically */
+    width: 30vw; /* Adjust width dynamically */
     visibility: hidden;
     opacity: 0;
     transition: visibility 0s, opacity 1s ease;
@@ -94,10 +95,25 @@ body {
     opacity: 1;
 }
 
-/* Additional styles for heading */
+.description-box.right {
+    left: auto;
+    right: calc(70% + 20px);
+    transform: translateX(0);
+}
+
 h1 {
     text-align: left;
     width: 100%;
     margin-left: 10vw;
     color: aliceblue;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from { opacity: 0.4; }
+    to { opacity: 1; }
 }
