--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,15 +9,16 @@ header {
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
     width: 90vw;
+    margin-top: 20px;
 }
 
 .logo img {
-    width: 100px; /* Adjust the size of the logo */
+    width: 100px; 
 }
 
 .user-info a {
     text-decoration: none;
-    color: #333;
+    color: #ffffff;
     padding: 5px 10px;
     border: 1px solid #333;
     border-radius: 5px;
