--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
 <div class="slideshow-container">
     <!-- Trailer slides -->
     {% for trailer in trending_trailers %}
-        <div class="trailer-slide">
+        <div class="trailer-slide fade">
             <iframe width="100%" height="100%" src="{{ trailer.video_url }}" frameborder="0" allowfullscreen></iframe>
         </div>
     {% endfor %}
