--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 10px 20px 10px 20px;
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
