--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,12 @@ header {
     margin-top: 20px;
 }
 
+.profile-picture {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+}
+
 .logo img {
     width: 8vw; 
 }
@@ -21,7 +27,7 @@ header {
     color: #ffffff;
     padding: 5px 10px;
     border: 1px solid #333;
-    border-radius: 5px;
+    border-radius: 5px; 
 }
 
 .user-info a:hover {
