--- a/static/css/details.css
+++ b/static/css/details.css
@@ -1,47 +1,76 @@
-* {
-    font-family: 'Open Sans', sans-serif;
-}
-
 body {
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: black;
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
+    font-family: Arial, sans-serif;
     background-color: #0a0a2b; /* Dark blue background color */
+
 }
+
 .movie-details {
-    display: flex;
-    flex-direction: column;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-top: 2vw;
+    position: relative;
+    width: 90vw;
+    height: 30vw;
 }
 
-h1 {
-    margin-top: 0;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 20px;
-}
-
-h2 {
-    margin-top: 20px;
-}
-
-.trailer {
-    margin-bottom: 20px;
-}
-
-iframe {
+.bg-poster {
+    position: relative;
     width: 100%;
-    border: 0;
+    height: 100%;
+    background-color: #000; /* Fallback color */
+    background-image: url('{{ movie.background_poster.url }}');
+    background-size: cover;
+    background-position: center;
+}
+
+.bg-poster img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%), #0a0a2b; /* Radial gradient from transparent to background color */
+    opacity: 0.8; /* Adjust opacity as needed */
+}
+
+.overlay-content {
+    position: absolute;
+    top: 50%;
+    left: 2%;
+    width: 50%;
+    transform: translateY(-50%);
+    background: #000000;
+    padding: 2vw;
+    border-radius: 2vw;
+    color: #fff;
+    z-index: 999;
+}
+
+.trailer-section {
+    position: absolute;
+    top: 50%;
+    right:  0;
+    transform: translateY(-50%);
+    padding: 20px;
+    color: #fff;
+}
+
+.stream {
+    width: 40vw;
+    padding: 20px;
+}
+
+video {
+    width: 100%;
+    height: auto;
 }
